<?xml version="1.0"?>
<package format="2">
  <name>measurement_models</name>
  <version>0.0.0</version>
  <description>The measurement_models package</description>

  <maintainer email="pknaperek@gmail.com">Patrik Knaperek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sgtdv_msgs</depend>
  
</package>
